<resources>
    <string name="app_name">SecondConstraint</string>
    <string name="place_your_order">PLACE YOUR ORDER</string>
    <string name="exit">EXIT</string>
    <string name="your_order">Your Order:</string>
    <string name="veggies">Veggies</string>
    <string name="mushroom">Mushroom</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="round">Round</string>
    <string name="square">Square</string>
</resources>